<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PhotoLang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="user_name">Enter Username</string>
    <string name="pass_word">Enter Password</string>
    <string name="Register_">New? Sign Up Here</string>
    <string name="sign_up" tools:ignore="DuplicateDefinition">Sign Up</string>
    <string name="Thanks" tools:ignore="DuplicateDefinition">Thanks</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="photolang">PHOTOLANG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_flashcards">Your Flashcards</string>
    <string name="characters">Characters</string>
    <string name="welcome">Welcome!</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="flashcards">Flashcards</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_label_1">Scan</string>
    <string name="text_label_2">Flashcards</string>
    <string name="text_label_3">Profile</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_password">input password</string>
    <string name="action_sign_in_short">action</string>
    <string name="prompt_email">input email</string>
    <string name="login_failed">Login Fail!</string>
    <string name="invalid_username">Invalid user name</string>
    <string name="invalid_password">Invalid password</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>


    <!-- SCAN FRAGMENT -->
    <string name="trust">Trust</string>
    <string name="object">Possible Object</string>
    <string name="capture">Capture Image</string>

    <!-- RESULT FRAGMENT -->
    <string name="btn_retake">Retake</string>
    <string name="btn_save">Save Flashcard</string>

</resources>